--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -8,3 +8,5 @@
 @import "./components/header.scss";
 @import "./components/input.scss";
 @import "./components/button.scss";
+@import "./components/form.scss";
+@import "./components/label.scss";
